--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "16.8.4",
     "react-bootstrap": "1.0.0-beta.5",
     "react-dom": "16.8.4",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "2.1.3",
     "solc": "^0.8.13",
     "truffle": "5.0.5",
