--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
     "ipfs-http-client": "^56.0.3",
-    "react": "16.8.4",
-    "react-bootstrap": "1.0.0-beta.5",
-    "react-dom": "16.8.4",
+    "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "2.1.3",
     "solc": "^0.8.13",
