--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An Ethereum Marketplace",
   "author": "gregory@dappuniversity.com",
   "dependencies": {
+    "@alch/alchemy-web3": "^1.4.2",
     "@openzeppelin/contracts": "^4.5.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
@@ -23,6 +24,7 @@
     "react-scripts": "2.1.3",
     "solc": "^0.8.13",
     "truffle": "5.0.5",
+    "truffle-hdwallet-provider": "^1.0.17",
     "web3": "1.0.0-beta.55"
   },
   "scripts": {
